@@ -1,3 +1,5 @@
+Add setting in profile to allow offline inbox for: staff, members or everyone
+
 Version 1.19.2 - May 7, 2016
 Remove JavaScript "load only new messages" feature
 Add JS auto-refresh to header instead
